--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,242 @@
 @import "tailwindcss";
+
+.table-th {
+  @apply text-slate-600 dark:text-slate-300 text-xs font-semibold uppercase py-5 px-6 ltr:text-left rtl:text-right;
+}
+
+.table-td {
+  @apply text-slate-600 dark:text-slate-300 text-sm font-normal capitalize px-6 py-5 border-slate-100 dark:border-slate-700;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.alert {
+  @apply py-[18px] px-6 font-normal text-sm rounded-md;
+}
+
+.alert-primary {
+  @apply bg-primary-500 text-white;
+}
+
+.alert-primary.light-mode {
+  @apply bg-opacity-[14%] text-primary-500;
+}
+
+.alert-secondary {
+  @apply bg-secondary-500 text-white;
+}
+
+.alert-secondary.light-mode {
+  @apply bg-opacity-[14%] text-slate-900;
+}
+
+.alert-success {
+  @apply bg-success-500 text-white;
+}
+
+.alert-success.light-mode {
+  @apply bg-opacity-[14%] text-success-500;
+}
+
+.alert-danger {
+  @apply bg-danger-500 text-white;
+}
+
+.alert-danger.light-mode {
+  @apply bg-opacity-[14%] text-danger-500;
+}
+
+.alert-warning {
+  @apply bg-warning-500 text-white;
+}
+
+.alert-warning.light-mode {
+  @apply bg-opacity-[14%] text-warning-500;
+}
+
+.alert-info {
+  @apply bg-info-500 text-white;
+}
+
+.alert-info.light-mode {
+  @apply bg-opacity-[14%] text-info-500;
+}
+
+.alert-light {
+  @apply bg-slate-100 text-slate-900;
+}
+
+.alert-light.light-mode {
+  @apply text-slate-500;
+}
+
+.alert-dark {
+  @apply bg-slate-900 text-white;
+}
+
+.alert-dark.light-mode {
+  @apply bg-opacity-[54%] text-slate-100;
+}
+
+.alert-outline-primary {
+  @apply border border-primary-500 text-primary-500;
+}
+
+.alert-outline-secondary {
+  @apply border border-secondary-500 text-secondary-500;
+}
+
+.alert-outline-success {
+  @apply border border-success-500 text-success-500;
+}
+
+.alert-outline-danger {
+  @apply border border-danger-500 text-danger-500;
+}
+
+.alert-outline-warning {
+  @apply border border-warning-500 text-warning-500;
+}
+
+.alert-outline-info {
+  @apply border border-info-500 text-info-500;
+}
+
+.alert-outline-light {
+  @apply border border-slate-200 text-slate-600;
+}
+
+.alert-outline-dark {
+  @apply border border-slate-900 text-slate-900;
+}
+
+.btn {
+  @apply font-semibold text-sm leading-6 md:px-6 md:py-3 px-4 py-3 rounded capitalize transition-all duration-150 md:whitespace-nowrap whitespace-normal relative;
+}
+
+.btn.btn-xl {
+  @apply text-[16px] md:px-10 px-7 md:py-4 py-3;
+}
+
+.btn.btn-sm {
+  @apply text-xs md:px-4 py-2 px-3;
+}
+
+.btn.block-btn {
+  @apply block w-full text-center;
+}
+
+.btn.block-btn span {
+  @apply justify-center;
+}
+
+.btn-dark {
+  @apply bg-slate-900 dark:bg-slate-900 dark:hover:bg-opacity-70 text-white hover:ring-2 hover:ring-opacity-80 ring-black hover:ring-offset-1 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-primary {
+  @apply bg-primary-500 dark:hover:bg-opacity-70 text-white hover:ring-2 hover:ring-opacity-80 ring-primary-500 hover:ring-offset-1 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-secondary {
+  @apply bg-secondary-500 dark:hover:bg-opacity-70 text-white hover:ring-2 hover:ring-opacity-80 ring-secondary-500 hover:ring-offset-1 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-success {
+  @apply bg-success-500 dark:hover:bg-opacity-70 text-white hover:ring-2 hover:ring-opacity-80 ring-success-500 hover:ring-offset-1 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-info {
+  @apply bg-[#0CE7FA] dark:hover:bg-opacity-70 text-white hover:ring-2 hover:ring-opacity-80 ring-[#0CE7FA] hover:ring-offset-1 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-warning {
+  @apply bg-[#FA916B] dark:hover:bg-opacity-70 text-white hover:ring-2 hover:ring-opacity-80 ring-[#FA916B] hover:ring-offset-1 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-danger {
+  @apply bg-danger-500 dark:hover:bg-opacity-70 text-white hover:ring-2 hover:ring-opacity-80 ring-danger-500 hover:ring-offset-1 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-light {
+  @apply bg-slate-100 dark:hover:bg-opacity-70 text-slate-900 hover:ring-2 hover:ring-opacity-80 ring-[#E0EAFF] hover:ring-offset-1 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-yellow {
+  @apply bg-yellow-400 text-white hover:ring-2 hover:ring-opacity-80 ring-yellow-400 hover:ring-offset-1 dark:hover:bg-opacity-80 dark:hover:ring-0 dark:hover:ring-offset-0;
+}
+
+.btn-outline-dark {
+  @apply bg-transparent text-slate-900 dark:text-slate-300 border border-black-500 dark:border-slate-600 hover:border-black-500 hover:bg-slate-900 hover:bg-opacity-5;
+}
+
+.btn-outline-dark.active {
+  @apply bg-slate-900 text-white dark:bg-slate-900 dark:text-slate-300;
+}
+
+.badge {
+  @apply py-1 px-2 text-xs capitalize font-semibold rounded-[.358rem] whitespace-nowrap align-baseline inline-flex;
+}
+
+h1 {
+  @apply text-6xl font-semibold text-slate-900 dark:text-slate-300;
+}
+
+h2 {
+  @apply text-5xl font-semibold text-slate-900 dark:text-slate-300;
+}
+
+h3 {
+  @apply text-4xl font-medium text-slate-900 dark:text-slate-300;
+}
+
+h4 {
+  @apply text-3xl font-medium text-slate-900 dark:text-slate-300;
+}
+
+h5 {
+  @apply text-2xl font-medium text-slate-900 dark:text-slate-300;
+}
+
+h6 {
+  @apply text-xl leading-5 font-medium text-slate-900 dark:text-slate-300;
+}
+
+.form-label {
+  @apply mb-2 text-slate-600 dark:text-slate-300 text-sm leading-6 capitalize cursor-pointer block w-full font-medium rtl:text-right rtl:block;
+}
+
+.form-control {
+  @apply bg-white dark:bg-slate-900 transition duration-300 ease-in-out border border-slate-200 dark:border-slate-700 dark:text-slate-300 focus:ring-1 focus:ring-slate-600 dark:focus:ring-slate-900 focus:outline-none focus:ring-opacity-90 rounded placeholder:text-slate-400 text-slate-900 text-sm px-3 placeholder:font-normal dark:placeholder:text-slate-400 block w-full;
+}
+
+.input-description {
+  @apply block text-secondary-500 font-light leading-4 text-xs mt-2;
+}
+
+.fromGroup {
+  @apply relative;
+}
+
+.fromGroup.has-error .form-control {
+  @apply border-danger-500 focus:ring-danger-500 focus:ring-opacity-90 focus:ring-1;
+}
+
+.fromGroup.is-valid .form-control {
+  @apply border-success-500 focus:ring-success-500 focus:ring-opacity-90 focus:ring-1;
+}
+
+.form-control[readonly] {
+  @apply bg-slate-200 text-slate-400 dark:bg-slate-600 cursor-pointer placeholder:text-slate-400;
+}
+
+.form-control[disabled] {
+  @apply cursor-not-allowed bg-slate-50 text-slate-800 placeholder:text-opacity-60 dark:bg-slate-600;
+}
